--- a/index.html
+++ b/index.html
@@ -61,12 +61,60 @@
 
         <section class="firstscreen__promo">
           <h1>Круизы в&nbsp;Антарктику</h1>
-          <p>Волшебный мир айсбергов и&nbsp;пингвинов</p>
+          <p>Волшебный мир айсбергов&nbsp;и&nbsp;пингвинов</p>
         </section>
       </div>
     </div>
 
     <main>
+
+      <section class="content">
+        <div class="content__inner container">
+          <div>
+            <h2>Путешествие на&nbsp;край&nbsp;Земли</h2>
+            <p>
+              Это волшебное путешествие поможет вам познакомиться поближе с&nbsp;удивительным миром Антарктики. Наш круизный лайнер
+              отвезет вас на&nbsp;край Земли, где вы&nbsp;сможете увидеть: ледяные айсберги, несколько видов пингвинов, китов, морских
+              котиков и&nbsp;многое другое.
+            </p>
+          </div>
+          <picture>
+            <source type="image/webp" media="(max-width: 320px)" srcset="img/about-mobile.webp 1x, img/about-mobile@2x.webp 2x">
+            <source type="image/webp" media="(max-width: 1023px)" srcset="img/about-tablet.webp 1x, img/about-tablet@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1024px)" srcset="img/about.webp 1x, img/about@2x.webp 2x">
+            <img src="img/about.jpg" srcset="img/about@2x.jpg 2x" alt="Пингвины на снегу." loading="lazy">
+          </picture>
+        </div>
+      </section>
+
+      <section class="list" style="--bg-default: url('../img/advantages.jpg');--bg-default2x: url('../img/advantages@2x.jpg');--bg-webp: url('../img/advantages.webp');--bg-webp2x: url('../img/advantages@2x.webp');--bg-webpMobile: url('../img/advantages-mobile.webp');--bg-webpMobile2x: url('../img/advantages-mobile@2x.webp');--bg-webpTablet: url('../img/advantages-tablet.webp');--bg-webpTablet2x: url('../img/advantages-tablet@2x.webp');--bg-color: #e3ecf6;">
+        <div class="container">
+          <h2 class="list__heading">Преимущества</h2>
+          <ul class="list__items">
+            <li class="list__item" style="--icon: url('../img/sprite.svg#icon-liner')">
+              <h3>Небольшой круизный&nbsp;лайнер</h3>
+              <p>
+                Круизный лайнер, рассчитанный всего лишь на&nbsp;300 гостей, поможет избежать шума и&nbsp;очередей и&nbsp;даст возможность
+                насладиться видами и&nbsp;природой.
+              </p>
+            </li>
+            <li class="list__item" style="--icon: url('../img/sprite.svg#icon-checks')">
+              <h3>Система все&nbsp;включено</h3>
+              <p>
+                Все наши круизы работают по&nbsp;системе &laquo;Все Включено&raquo;. Великолепные блюда и&nbsp;безлимитный бар доступны для вас&nbsp;24
+                часа.
+              </p>
+            </li>
+            <li class="list__item" style="--icon: url('../img/sprite.svg#icon-boat')">
+              <h3>Экскурсионные туры&nbsp;на&nbsp;Zodiac</h3>
+              <p>
+                Экскурсионные туры к&nbsp;берегам Антарктиды совершаются на&nbsp;оборудованных лодках типа Zodiack c&nbsp;опытными
+                экскурсоводами.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer class="page-footer">
