deploy: 7c72668b0711c86786dffdca17894074bc63b710

--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="page">
-    <div class="firstscreen page__firstscreen" style="--bg-default: url('../img/firstscreen.jpg');--bg-default2x: url('../img/firstscreen@2x.jpg');--bg-webp: url('../img/firstscreen.webp');--bg-webp2x: url('../img/firstscreen@2x.webp');--bg-webpMobile: url('../img/firstscreen-mobile.webp');--bg-webpMobile2x: url('../img/firstscreen-mobile@2x.webp');--bg-webpTablet: url('../img/firstscreen-tablet.webp');--bg-webpTablet2x: url('../img/firstscreen-tablet@2x.webp');">
+    <div class="firstscreen page__firstscreen" style="--bg-default: url('../img/firstscreen.jpg');--bg-default2x: url('../img/firstscreen@2x.jpg');--bg-webp: url('../img/firstscreen.webp');--bg-webp2x: url('../img/firstscreen@2x.webp');--bg-webpTablet: url('../img/firstscreen-tablet.webp');--bg-webpTablet2x: url('../img/firstscreen-tablet@2x.webp');--bg-webpMobile: url('../img/firstscreen-mobile.webp');--bg-webpMobile2x: url('../img/firstscreen-mobile@2x.webp');">
       <div class="container">
         <header class="page-header firstscreen__header no-js" data-page-header="">
           <a class="page-header__logo logo" href="index.html">
@@ -41,7 +41,7 @@
                 </a>
               </li>
               <li>
-                <a href="index.html#directions" class="nav__link">
+                <a href="index.html#upcoming" class="nav__link">
                   Направления
                 </a>
               </li>
@@ -78,13 +78,13 @@
             </a>
           </li>
           <li>
-            <a class="socials__link socials__link--vk" href="#!">
-              <span class="visually-hidden">Мы&nbsp;в&nbsp;Контакте.</span>
+            <a class="socials__link socials__link--dzen" href="#!">
+              <span class="visually-hidden">Мы&nbsp;в&nbsp;Яндекс.Дзен</span>
             </a>
           </li>
           <li>
-            <a class="socials__link socials__link--pinterest" href="#!">
-              <span class="visually-hidden">Мы&nbsp;в&nbsp;Pinterest</span>
+            <a class="socials__link socials__link--reddit" href="#!">
+              <span class="visually-hidden">Мы&nbsp;в&nbsp;Reddit</span>
             </a>
           </li>
         </ul>
