--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="page">
-    <div class="firstscreen page__firstscreen" style="--bg-default: url('../img/firstscreen.jpg');--bg-default2x: url('../img/firstscreen@2x.jpg');--bg-webp: url('../img/firstscreen.webp');--bg-webp2x: url('../img/firstscreen@2x.webp');--bg-webpMobile: url('../img/firstscreen-mobile.webp');--bg-webpMobile2x: url('../img/firstscreen-mobile@2x.webp');--bg-webpTablet: url('../img/firstscreen-tablet.webp');--bg-webpTablet2x: url('../img/firstscreen-tablet@2x.webp');">
+    <div class="firstscreen page__firstscreen" style="--bg-default: url('../img/firstscreen.jpg');--bg-default2x: url('../img/firstscreen@2x.jpg');--bg-webp: url('../img/firstscreen.webp');--bg-webp2x: url('../img/firstscreen@2x.webp');--bg-webpTablet: url('../img/firstscreen-tablet.webp');--bg-webpTablet2x: url('../img/firstscreen-tablet@2x.webp');--bg-webpMobile: url('../img/firstscreen-mobile.webp');--bg-webpMobile2x: url('../img/firstscreen-mobile@2x.webp');">
       <div class="container">
         <header class="page-header firstscreen__header no-js" data-page-header="">
           <a class="page-header__logo logo" aria-hidden="true">
@@ -41,7 +41,7 @@
                 </a>
               </li>
               <li>
-                <a href="#directions" class="nav__link">
+                <a href="#upcoming" class="nav__link">
                   Направления
                 </a>
               </li>
@@ -87,7 +87,7 @@
         </div>
       </section>
 
-      <section class="list" style="--bg-default: url('../img/advantages.jpg');--bg-default2x: url('../img/advantages@2x.jpg');--bg-webp: url('../img/advantages.webp');--bg-webp2x: url('../img/advantages@2x.webp');--bg-webpMobile: url('../img/advantages-mobile.webp');--bg-webpMobile2x: url('../img/advantages-mobile@2x.webp');--bg-webpTablet: url('../img/advantages-tablet.webp');--bg-webpTablet2x: url('../img/advantages-tablet@2x.webp');--bg-color: #e3ecf6;">
+      <section class="list" id="advantages" style="--bg-default: url('../img/advantages.jpg');--bg-default2x: url('../img/advantages@2x.jpg');--bg-webp: url('../img/advantages.webp');--bg-webp2x: url('../img/advantages@2x.webp');--bg-webpTablet: url('../img/advantages-tablet.webp');--bg-webpTablet2x: url('../img/advantages-tablet@2x.webp');--bg-webpMobile: url('../img/advantages-mobile.webp');--bg-webpMobile2x: url('../img/advantages-mobile@2x.webp');--bg-color: #e3ecf6;">
         <div class="container">
           <h2 class="list__heading">Преимущества</h2>
           <ul class="list__items">
@@ -115,6 +115,158 @@
           </ul>
         </div>
       </section>
+
+      <section class="cards" id="upcoming">
+        <div class="container">
+          <h2 class="cards__heading">Ближайшие круизы</h2>
+          <ul class="cards__items">
+            <li class="cards__item">
+              <div class="cards__content">
+                <h3 class="cards__item-heading">Круиз &laquo;Астория&raquo;</h3>
+                <h4>Маршрут</h4>
+                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида</p>
+                <h4>Порт отправления</h4>
+                <p>Буэнос-Айрес</p>
+                <h4>Продолжительность</h4>
+                <p>20 дней</p>
+                <h4>Цена</h4>
+                <p>от&nbsp;14500 $</p>
+                <a class="cards__btn btn" href="#!">Забронировать</a>
+              </div>
+              <picture>
+                <source type="image/webp" srcset="img/offer-1.webp 1x, img/offer-1@2x.webp 2x">
+                <img src="img/offer-1.jpg" srcset="img/offer-1@2x.jpg 2x" alt="Круиз “Астория”." loading="lazy">
+              </picture>
+            </li>
+            <li class="cards__item">
+              <div class="cards__content">
+                <h3 class="cards__item-heading">Круиз &laquo;Элайн&raquo;</h3>
+                <h4>Маршрут</h4>
+                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида&nbsp;&mdash; Чили</p>
+                <h4>Порт отправления</h4>
+                <p>Буэнос-Айрес</p>
+                <h4>Продолжительность</h4>
+                <p>20 дней</p>
+                <h4>Цена</h4>
+                <p>от&nbsp;14500 $</p>
+                <a class="cards__btn btn" href="#!">Забронировать</a>
+              </div>
+              <picture>
+                <source type="image/webp" srcset="img/offer-2.webp 1x, img/offer-2@2x.webp 2x">
+                <img src="img/offer-2.jpg" srcset="img/offer-2@2x.jpg 2x" alt="Круиз “Элайн”." loading="lazy">
+              </picture>
+            </li>
+            <li class="cards__item">
+              <div class="cards__content">
+                <h3 class="cards__item-heading">Круиз &laquo;Атлантис&raquo;</h3>
+                <h4>Маршрут</h4>
+                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида</p>
+                <h4>Порт отправления</h4>
+                <p>Буэнос-Айрес</p>
+                <h4>Продолжительность</h4>
+                <p>20 дней</p>
+                <h4>Цена</h4>
+                <p>от&nbsp;14500 $</p>
+                <a class="cards__btn btn" href="#!">Забронировать</a>
+              </div>
+              <picture>
+                <source type="image/webp" srcset="img/offer-3.webp 1x, img/offer-3@2x.webp 2x">
+                <img src="img/offer-3.jpg" srcset="img/offer-3@2x.jpg 2x" alt="Круиз “Атлантис”." loading="lazy">
+              </picture>
+            </li>
+            <li class="cards__item">
+              <div class="cards__content">
+                <h3 class="cards__item-heading">Круиз &laquo;Одиссей&raquo;</h3>
+                <h4>Маршрут</h4>
+                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида&nbsp;&mdash; Чили</p>
+                <h4>Порт отправления</h4>
+                <p>Буэнос-Айрес</p>
+                <h4>Продолжительность</h4>
+                <p>20 дней</p>
+                <h4>Цена</h4>
+                <p>от&nbsp;14500 $</p>
+                <a class="cards__btn btn" href="#!">Забронировать</a>
+              </div>
+              <picture>
+                <source type="image/webp" srcset="img/offer-4.webp 1x, img/offer-4@2x.webp 2x">
+                <img src="img/offer-4.jpg" srcset="img/offer-4@2x.jpg 2x" alt="Круиз “Одиссей”." loading="lazy">
+              </picture>
+            </li>
+            <li class="cards__item">
+              <div class="cards__content">
+                <h3 class="cards__item-heading">Круиз &laquo;Олимпия&raquo;</h3>
+                <h4>Маршрут</h4>
+                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида</p>
+                <h4>Порт отправления</h4>
+                <p>Буэнос-Айрес</p>
+                <h4>Продолжительность</h4>
+                <p>20 дней</p>
+                <h4>Цена</h4>
+                <p>от&nbsp;14500 $</p>
+                <a class="cards__btn btn" href="#!">Забронировать</a>
+              </div>
+              <picture>
+                <source type="image/webp" srcset="img/offer-5.webp 1x, img/offer-5@2x.webp 2x">
+                <img src="img/offer-5.jpg" srcset="img/offer-5@2x.jpg 2x" alt="Круиз “Олимпия”." loading="lazy">
+              </picture>
+            </li>
+            <li class="cards__item">
+              <div class="cards__content">
+                <h3 class="cards__item-heading">Круиз &laquo;Аврора&raquo;</h3>
+                <h4>Маршрут</h4>
+                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида&nbsp;&mdash; Чили</p>
+                <h4>Порт отправления</h4>
+                <p>Буэнос-Айрес</p>
+                <h4>Продолжительность</h4>
+                <p>20 дней</p>
+                <h4>Цена</h4>
+                <p>от&nbsp;14500 $</p>
+                <a class="cards__btn btn" href="#!">Забронировать</a>
+              </div>
+              <picture>
+                <source type="image/webp" srcset="img/offer-6.webp 1x, img/offer-6@2x.webp 2x">
+                <img src="img/offer-6.jpg" srcset="img/offer-6@2x.jpg 2x" alt="Круиз “Аврора”." loading="lazy">
+              </picture>
+            </li>
+            <li class="cards__item">
+              <div class="cards__content">
+                <h3 class="cards__item-heading">Круиз &laquo;Леонор&raquo;</h3>
+                <h4>Маршрут</h4>
+                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида</p>
+                <h4>Порт отправления</h4>
+                <p>Буэнос-Айрес</p>
+                <h4>Продолжительность</h4>
+                <p>20 дней</p>
+                <h4>Цена</h4>
+                <p>от&nbsp;14500 $</p>
+                <a class="cards__btn btn" href="#!">Забронировать</a>
+              </div>
+              <picture>
+                <source type="image/webp" srcset="img/offer-7.webp 1x, img/offer-7@2x.webp 2x">
+                <img src="img/offer-7.jpg" srcset="img/offer-7@2x.jpg 2x" alt="Круиз “Леонор”." loading="lazy">
+              </picture>
+            </li>
+            <li class="cards__item">
+              <div class="cards__content">
+                <h3 class="cards__item-heading">Круиз &laquo;Минион&nbsp;&mdash; 1&raquo;</h3>
+                <h4>Маршрут</h4>
+                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида&nbsp;&mdash; Чили</p>
+                <h4>Порт отправления</h4>
+                <p>Буэнос-Айрес</p>
+                <h4>Продолжительность</h4>
+                <p>20 дней</p>
+                <h4>Цена</h4>
+                <p>от&nbsp;14500 $</p>
+                <a class="cards__btn btn" href="#!">Забронировать</a>
+              </div>
+              <picture>
+                <source type="image/webp" srcset="img/offer-2.webp 1x, img/offer-2@2x.webp 2x">
+                <img src="img/offer-2.jpg" srcset="img/offer-2@2x.jpg 2x" alt="Круиз “Минион - 1”." loading="lazy">
+              </picture>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer class="page-footer">
@@ -126,13 +278,13 @@
             </a>
           </li>
           <li>
-            <a class="socials__link socials__link--vk" href="#!">
-              <span class="visually-hidden">Мы&nbsp;в&nbsp;Контакте.</span>
+            <a class="socials__link socials__link--dzen" href="#!">
+              <span class="visually-hidden">Мы&nbsp;в&nbsp;Яндекс.Дзен</span>
             </a>
           </li>
           <li>
-            <a class="socials__link socials__link--pinterest" href="#!">
-              <span class="visually-hidden">Мы&nbsp;в&nbsp;Pinterest</span>
+            <a class="socials__link socials__link--reddit" href="#!">
+              <span class="visually-hidden">Мы&nbsp;в&nbsp;Reddit</span>
             </a>
           </li>
         </ul>
