--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                 <h4>Маршрут</h4>
                 <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида</p>
                 <h4>Порт отправления</h4>
-                <p>Буэнос-Айрес</p>
+                <p>Ушуайя</p>
                 <h4>Продолжительность</h4>
-                <p>20 дней</p>
+                <p>11 дней</p>
                 <h4>Цена</h4>
-                <p>от&nbsp;14500 $</p>
+                <p>от&nbsp;11500 $</p>
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
@@ -160,11 +160,11 @@
               <div class="cards__content">
                 <h3 class="cards__item-heading">Круиз &laquo;Атлантис&raquo;</h3>
                 <h4>Маршрут</h4>
-                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида</p>
+                <p>Аргентина&nbsp;&mdash; Южная Георгия и&nbsp;Южные Сандвичевы Острова&nbsp;&mdash; Антарктида</p>
                 <h4>Порт отправления</h4>
-                <p>Буэнос-Айрес</p>
+                <p>Ушуайя</p>
                 <h4>Продолжительность</h4>
-                <p>20 дней</p>
+                <p>15 дней</p>
                 <h4>Цена</h4>
                 <p>от&nbsp;14500 $</p>
                 <a class="cards__btn btn" href="#!">Забронировать</a>
@@ -178,13 +178,13 @@
               <div class="cards__content">
                 <h3 class="cards__item-heading">Круиз &laquo;Одиссей&raquo;</h3>
                 <h4>Маршрут</h4>
-                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида&nbsp;&mdash; Чили</p>
+                <p>Чили&nbsp;&mdash; Антарктида</p>
                 <h4>Порт отправления</h4>
-                <p>Буэнос-Айрес</p>
+                <p>Пунта-Аренас</p>
                 <h4>Продолжительность</h4>
-                <p>20 дней</p>
+                <p>13 дней</p>
                 <h4>Цена</h4>
-                <p>от&nbsp;14500 $</p>
+                <p>от&nbsp;9700 $</p>
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
@@ -196,13 +196,13 @@
               <div class="cards__content">
                 <h3 class="cards__item-heading">Круиз &laquo;Олимпия&raquo;</h3>
                 <h4>Маршрут</h4>
-                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида</p>
+                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Южная Георгия&nbsp;&mdash; Антарктида</p>
                 <h4>Порт отправления</h4>
-                <p>Буэнос-Айрес</p>
+                <p>Ушуайя</p>
                 <h4>Продолжительность</h4>
-                <p>20 дней</p>
+                <p>21 день</p>
                 <h4>Цена</h4>
-                <p>от&nbsp;14500 $</p>
+                <p>от&nbsp;18600 $</p>
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
@@ -214,13 +214,13 @@
               <div class="cards__content">
                 <h3 class="cards__item-heading">Круиз &laquo;Аврора&raquo;</h3>
                 <h4>Маршрут</h4>
-                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида&nbsp;&mdash; Чили</p>
+                <p>Аргентина&nbsp;&mdash; Антарктида&nbsp;&mdash; Чили</p>
                 <h4>Порт отправления</h4>
-                <p>Буэнос-Айрес</p>
+                <p>Ушуайя</p>
                 <h4>Продолжительность</h4>
-                <p>20 дней</p>
+                <p>14 дней</p>
                 <h4>Цена</h4>
-                <p>от&nbsp;14500 $</p>
+                <p>от&nbsp;11700 $</p>
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
@@ -232,13 +232,13 @@
               <div class="cards__content">
                 <h3 class="cards__item-heading">Круиз &laquo;Леонор&raquo;</h3>
                 <h4>Маршрут</h4>
-                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида</p>
+                <p>Чили&nbsp;&mdash; Южная Георгия&nbsp;&mdash; Антарктида&nbsp;&mdash; Аргентина</p>
                 <h4>Порт отправления</h4>
-                <p>Буэнос-Айрес</p>
+                <p>Пунта-Аренас</p>
                 <h4>Продолжительность</h4>
-                <p>20 дней</p>
+                <p>17 дней</p>
                 <h4>Цена</h4>
-                <p>от&nbsp;14500 $</p>
+                <p>от&nbsp;12500 $</p>
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
@@ -250,13 +250,13 @@
               <div class="cards__content">
                 <h3 class="cards__item-heading">Круиз &laquo;Минион&nbsp;&mdash; 1&raquo;</h3>
                 <h4>Маршрут</h4>
-                <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида&nbsp;&mdash; Чили</p>
+                <p>Аргентина&nbsp;&mdash; Антарктида</p>
                 <h4>Порт отправления</h4>
-                <p>Буэнос-Айрес</p>
+                <p>Ушуайя</p>
                 <h4>Продолжительность</h4>
-                <p>20 дней</p>
+                <p>11 дней</p>
                 <h4>Цена</h4>
-                <p>от&nbsp;14500 $</p>
+                <p>от&nbsp;12300 $</p>
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
