deploy: db1c5db15676f89094287d55d22206fb40d146da

--- a/404.html
+++ b/404.html
@@ -91,6 +91,10 @@
       </div>
     </footer>
   </div>
+  <script>
+    window.pageData = {};
+
+  </script>
   <script src="js/vendor.min.js"></script>
   <script src="js/main.min.js"></script>
 </body>
