--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
     <main>
 
-      <section class="content">
-        <div class="content__inner container">
+      <section class="content ">
+        <div class="content__inner  container">
           <div>
             <h2>Путешествие на&nbsp;край&nbsp;Земли</h2>
             <p>
@@ -294,12 +294,35 @@
             <p class="form__group is-validable" data-group="">
               <label>
                 <input name="agree" type="checkbox" checked="" required="">
-                <span>Я&nbsp;согласен на&nbsp;обработку моих персональных данных</span>
+                <span>Я&nbsp;согласен на&nbsp;обработку моих&nbsp;персональных&nbsp;данных</span>
                 <strong>Согласие на&nbsp;обработку обязательно</strong>
               </label>
             </p>
             <button class="form__btn btn" type="submit">Оставить заявку</button>
           </form>
+        </div>
+      </section>
+
+      <section class="content content--headless">
+        <div class="content__inner content__inner--reverse container">
+          <div class="content__iconable">
+            <h2>Контакты</h2>
+            <p><b>У&nbsp;вас ещё остались вопросы или сомнения? Приезжайте к&nbsp;нам в&nbsp;офис и&nbsp;мы&nbsp;вам все расскажем.</b></p>
+            <p>
+              <img src="img/sprite.svg#icon-pin" width="18" height="22" alt="" aria-hidden="true">
+              г.&nbsp;Санкт Петербург, ул.&nbsp;Большая&nbsp;Конюшенная,&nbsp;19/8
+            </p>
+            <p>
+              <img src="img/sprite.svg#icon-tel" width="18" height="18" alt="" aria-hidden="true">
+              <a href="tel:+78002000000">8-800-200-00-00</a>
+            </p>
+          </div>
+          <div class="content__map map" id="contactsMap" data-map="">
+            <picture>
+              <source type="image/webp" srcset="img/map.webp 1x, img/map@2x.webp 2x">
+              <img src="img/map.jpg" srcset="img/map@2x.jpg 2x" alt="Адрес на карте." loading="lazy">
+            </picture>
+          </div>
         </div>
       </section>
     </main>
@@ -326,6 +349,28 @@
       </div>
     </footer>
   </div>
+  <script>
+    window.pageData = {
+      "maps": {
+        "contactsMap": {
+          "initials": {
+            "center": [59.9387165, 30.3230474],
+            "controls": [],
+            "zoom": 16
+          },
+          "placemark": [{
+            "hintContent": "г. Санкт Петербург, ул. Большая Конюшенная, 19/8"
+          }, {
+            "iconImageHref": "img/sprite.svg#icon-pin",
+            "iconImageSize": [18, 22],
+            "iconLayout": "default#image",
+            "iconShadow": false
+          }]
+        }
+      }
+    };
+
+  </script>
   <script src="js/vendor.min.js"></script>
   <script src="js/main.min.js"></script>
 </body>
