--- a/sitemap.html
+++ b/sitemap.html
@@ -46,6 +46,10 @@
       </section>
     </main>
   </div>
+  <script>
+    window.pageData = {};
+
+  </script>
   <script src="js/vendor.min.js"></script>
   <script src="js/main.min.js"></script>
 </body>
