deploy: 0cb5f742b9abe18a39ce2757f348722b8e32c6dd

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
       </section>
 
-      <section class="list" id="advantages" style="--bg-default: url('../img/advantages.jpg');--bg-default2x: url('../img/advantages@2x.jpg');--bg-webp: url('../img/advantages.webp');--bg-webp2x: url('../img/advantages@2x.webp');--bg-webpTablet: url('../img/advantages-tablet.webp');--bg-webpTablet2x: url('../img/advantages-tablet@2x.webp');--bg-webpMobile: url('../img/advantages-mobile.webp');--bg-webpMobile2x: url('../img/advantages-mobile@2x.webp');--bg-color: #e3ecf6;">
+      <section class="list" id="advantages" data-lazy-style="--bg-default: url('../img/advantages.jpg');--bg-default2x: url('../img/advantages@2x.jpg');--bg-webp: url('../img/advantages.webp');--bg-webp2x: url('../img/advantages@2x.webp');--bg-webpTablet: url('../img/advantages-tablet.webp');--bg-webpTablet2x: url('../img/advantages-tablet@2x.webp');--bg-webpMobile: url('../img/advantages-mobile.webp');--bg-webpMobile2x: url('../img/advantages-mobile@2x.webp');--bg-color: #e3ecf6;">
         <div class="container">
           <h2 class="list__heading">Преимущества</h2>
           <ul class="list__items">
@@ -268,7 +268,7 @@
         </div>
       </section>
 
-      <section class="form-section" style="--bg-default: url('../img/form-section.jpg');--bg-default2x: url('../img/form-section@2x.jpg');--bg-webp: url('../img/form-section.webp');--bg-webp2x: url('../img/form-section@2x.webp');--bg-webpTablet: url('../img/form-section-tablet.webp');--bg-webpTablet2x: url('../img/form-section-tablet@2x.webp');--bg-webpMobile: url('../img/form-section-mobile.webp');--bg-webpMobile2x: url('../img/form-section-mobile@2x.webp');--bg-color: #e3ecf6;">
+      <section class="form-section" data-lazy-style="--bg-default: url('../img/form-section.jpg');--bg-default2x: url('../img/form-section@2x.jpg');--bg-webp: url('../img/form-section.webp');--bg-webp2x: url('../img/form-section@2x.webp');--bg-webpTablet: url('../img/form-section-tablet.webp');--bg-webpTablet2x: url('../img/form-section-tablet@2x.webp');--bg-webpMobile: url('../img/form-section-mobile.webp');--bg-webpMobile2x: url('../img/form-section-mobile@2x.webp');--bg-color: #e3ecf6;">
         <div class="form-section__inner container">
           <div class="form-section__content">
             <h2>Раннее бронирование</h2>
