--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               <label for="order-name">Имя</label>
             </p>
             <p class="form__group is-validable" data-group="">
-              <input id="order-phone" name="phone" type="tel" placeholder="Телефон" pattern="^\+?\d{7,13}$" required="">
+              <input id="order-phone" name="phone" type="tel" placeholder="Телефон" pattern="^\+?\d{7,}$" required="">
               <strong>Введите от&nbsp;7 до&nbsp;13 цифр</strong>
               <label for="order-phone">Телефон</label>
             </p>
