deploy: 46364d2b9890a0478b35d531ee3b62cc71e3acd6

--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
               <label for="order-name">Имя</label>
             </p>
             <p class="form__group is-validable" data-group="">
-              <input id="order-phone" name="phone" type="tel" placeholder="Телефон" pattern="^\+?\d{7,}$" required="">
-              <strong>Введите от&nbsp;7 до&nbsp;13 цифр</strong>
+              <input id="order-phone" name="phone" type="tel" placeholder="Телефон" pattern="^\+?[\d ()-]+$" required="">
+              <strong>Введите телефон (только цифры)</strong>
               <label for="order-phone">Телефон</label>
             </p>
             <p class="form__group is-validable" data-group="">
