deploy: 2e1214ded92abd8edce059dab86733d8f38d8e79

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="firstscreen page__firstscreen" style="--bg-default: url('../img/firstscreen.jpg');--bg-default2x: url('../img/firstscreen@2x.jpg');--bg-webp: url('../img/firstscreen.webp');--bg-webp2x: url('../img/firstscreen@2x.webp');--bg-webpTablet: url('../img/firstscreen-tablet.webp');--bg-webpTablet2x: url('../img/firstscreen-tablet@2x.webp');--bg-webpMobile: url('../img/firstscreen-mobile.webp');--bg-webpMobile2x: url('../img/firstscreen-mobile@2x.webp');">
       <div class="container">
         <header class="page-header firstscreen__header no-js" data-page-header="">
-          <a class="logo" aria-hidden="true">
+          <a class="logo" aria-current="page">
             <span class="visually-hidden">На&nbsp;главную.</span>
             <svg width="70" height="38" viewbox="0 0 70 38" role="img" focusable="false">
               <use xlink:href="img/svg/logo.svg#logo"></use>
@@ -329,7 +329,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__inner container">
-        <a class="logo" aria-hidden="true">
+        <a class="logo" aria-current="page">
           <span class="visually-hidden">На&nbsp;главную.</span>
           <svg width="70" height="38" viewbox="0 0 70 38" role="img" focusable="false">
             <use xlink:href="img/svg/logo.svg#logo"></use>
