--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <li class="list__item" style="--icon: url('../img/sprite.svg#icon-checks')">
               <h3>Система все&nbsp;включено</h3>
               <p>
-                Все наши круизы работают по&nbsp;системе &laquo;Все Включено&raquo;. Великолепные блюда и&nbsp;безлимитный бар доступны для вас&nbsp;24
+                Все наши круизы работают по&nbsp;системе &ldquo;Все Включено&rdquo;. Великолепные блюда и&nbsp;безлимитный бар доступны для вас&nbsp;24
                 часа.
               </p>
             </li>
@@ -122,7 +122,7 @@
           <ul class="cards__items">
             <li class="cards__item">
               <div class="cards__content">
-                <h3 class="cards__item-heading">Круиз &laquo;Астория&raquo;</h3>
+                <h3 class="cards__item-heading">Круиз &ldquo;Астория&rdquo;</h3>
                 <h4>Маршрут</h4>
                 <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида</p>
                 <h4>Порт отправления</h4>
@@ -140,7 +140,7 @@
             </li>
             <li class="cards__item">
               <div class="cards__content">
-                <h3 class="cards__item-heading">Круиз &laquo;Элайн&raquo;</h3>
+                <h3 class="cards__item-heading">Круиз &ldquo;Элайн&rdquo;</h3>
                 <h4>Маршрут</h4>
                 <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Антарктида&nbsp;&mdash; Чили</p>
                 <h4>Порт отправления</h4>
@@ -158,7 +158,7 @@
             </li>
             <li class="cards__item">
               <div class="cards__content">
-                <h3 class="cards__item-heading">Круиз &laquo;Атлантис&raquo;</h3>
+                <h3 class="cards__item-heading">Круиз &ldquo;Атлантис&rdquo;</h3>
                 <h4>Маршрут</h4>
                 <p>Аргентина&nbsp;&mdash; Южная Георгия и&nbsp;Южные Сандвичевы Острова&nbsp;&mdash; Антарктида</p>
                 <h4>Порт отправления</h4>
@@ -176,7 +176,7 @@
             </li>
             <li class="cards__item">
               <div class="cards__content">
-                <h3 class="cards__item-heading">Круиз &laquo;Одиссей&raquo;</h3>
+                <h3 class="cards__item-heading">Круиз &ldquo;Одиссей&rdquo;</h3>
                 <h4>Маршрут</h4>
                 <p>Чили&nbsp;&mdash; Антарктида</p>
                 <h4>Порт отправления</h4>
@@ -194,7 +194,7 @@
             </li>
             <li class="cards__item">
               <div class="cards__content">
-                <h3 class="cards__item-heading">Круиз &laquo;Олимпия&raquo;</h3>
+                <h3 class="cards__item-heading">Круиз &ldquo;Олимпия&rdquo;</h3>
                 <h4>Маршрут</h4>
                 <p>Аргентина&nbsp;&mdash; Фолклендские острова&nbsp;&mdash; Южная Георгия&nbsp;&mdash; Антарктида</p>
                 <h4>Порт отправления</h4>
@@ -212,7 +212,7 @@
             </li>
             <li class="cards__item">
               <div class="cards__content">
-                <h3 class="cards__item-heading">Круиз &laquo;Аврора&raquo;</h3>
+                <h3 class="cards__item-heading">Круиз &ldquo;Аврора&rdquo;</h3>
                 <h4>Маршрут</h4>
                 <p>Аргентина&nbsp;&mdash; Антарктида&nbsp;&mdash; Чили</p>
                 <h4>Порт отправления</h4>
@@ -230,7 +230,7 @@
             </li>
             <li class="cards__item">
               <div class="cards__content">
-                <h3 class="cards__item-heading">Круиз &laquo;Леонор&raquo;</h3>
+                <h3 class="cards__item-heading">Круиз &ldquo;Леонор&rdquo;</h3>
                 <h4>Маршрут</h4>
                 <p>Чили&nbsp;&mdash; Южная Георгия&nbsp;&mdash; Антарктида&nbsp;&mdash; Аргентина</p>
                 <h4>Порт отправления</h4>
@@ -248,7 +248,7 @@
             </li>
             <li class="cards__item">
               <div class="cards__content">
-                <h3 class="cards__item-heading">Круиз &laquo;Минион&nbsp;&mdash; 1&raquo;</h3>
+                <h3 class="cards__item-heading">Круиз &ldquo;Минион&nbsp;&mdash; 1&rdquo;</h3>
                 <h4>Маршрут</h4>
                 <p>Аргентина&nbsp;&mdash; Антарктида</p>
                 <h4>Порт отправления</h4>
