deploy: 00ca54033a3764d2c732193321d3f5f71aa412e7

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="page">
-    <div class="firstscreen page__firstscreen" style="--bg-default: url('../img/firstscreen.jpg');--bg-default2x: url('../img/firstscreen@2x.jpg');--bg-webp: url('../img/firstscreen.webp');--bg-webp2x: url('../img/firstscreen@2x.webp');--bg-webpTablet: url('../img/firstscreen-tablet.webp');--bg-webpTablet2x: url('../img/firstscreen-tablet@2x.webp');--bg-webpMobile: url('../img/firstscreen-mobile.webp');--bg-webpMobile2x: url('../img/firstscreen-mobile@2x.webp');">
+    <div class="firstscreen page__firstscreen" style="--bg-webp: url('../img/firstscreen.webp');--bg-webp2x: url('../img/firstscreen@2x.webp');--bg-webpTablet: url('../img/firstscreen-tablet.webp');--bg-webpTablet2x: url('../img/firstscreen-tablet@2x.webp');--bg-webpMobile: url('../img/firstscreen-mobile.webp');--bg-webpMobile2x: url('../img/firstscreen-mobile@2x.webp');">
       <div class="container">
         <header class="page-header firstscreen__header no-js" data-page-header="">
           <a class="logo" aria-current="page">
@@ -79,15 +79,14 @@
             </p>
           </div>
           <picture>
-            <source type="image/webp" media="(max-width: 320px)" srcset="img/about-mobile.webp 1x, img/about-mobile@2x.webp 2x">
+            <source media="(max-width: 320px)" srcset="img/about-mobile.webp 1x, img/about-mobile@2x.webp 2x">
             <source type="image/webp" media="(max-width: 1023px)" srcset="img/about-tablet.webp 1x, img/about-tablet@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 1024px)" srcset="img/about.webp 1x, img/about@2x.webp 2x">
-            <img src="img/about.jpg" srcset="img/about@2x.jpg 2x" alt="Пингвины на снегу." loading="lazy">
+            <img src="img/about.webp" srcset="img/about@2x.webp 2x" alt="Пингвины на снегу." loading="lazy">
           </picture>
         </div>
       </section>
 
-      <section class="list" id="advantages" data-lazy-style="--bg-default: url('../img/advantages.jpg');--bg-default2x: url('../img/advantages@2x.jpg');--bg-webp: url('../img/advantages.webp');--bg-webp2x: url('../img/advantages@2x.webp');--bg-webpTablet: url('../img/advantages-tablet.webp');--bg-webpTablet2x: url('../img/advantages-tablet@2x.webp');--bg-webpMobile: url('../img/advantages-mobile.webp');--bg-webpMobile2x: url('../img/advantages-mobile@2x.webp');--bg-color: #e3ecf6;">
+      <section class="list" id="advantages" data-lazy-style="--bg-webp: url('../img/advantages.webp');--bg-webp2x: url('../img/advantages@2x.webp');--bg-webpTablet: url('../img/advantages-tablet.webp');--bg-webpTablet2x: url('../img/advantages-tablet@2x.webp');--bg-webpMobile: url('../img/advantages-mobile.webp');--bg-webpMobile2x: url('../img/advantages-mobile@2x.webp');--bg-color: #e3ecf6;">
         <div class="container">
           <h2 class="list__heading">Преимущества</h2>
           <ul class="list__items">
@@ -134,8 +133,7 @@
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
-                <source type="image/webp" srcset="img/offer-1.webp 1x, img/offer-1@2x.webp 2x">
-                <img src="img/offer-1.jpg" srcset="img/offer-1@2x.jpg 2x" alt="Круиз “Астория”." loading="lazy">
+                <img src="img/offer-1.webp" srcset="img/offer-1@2x.webp 2x" alt="Круиз “Астория”." loading="lazy">
               </picture>
             </li>
             <li class="cards__item">
@@ -152,8 +150,7 @@
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
-                <source type="image/webp" srcset="img/offer-2.webp 1x, img/offer-2@2x.webp 2x">
-                <img src="img/offer-2.jpg" srcset="img/offer-2@2x.jpg 2x" alt="Круиз “Элайн”." loading="lazy">
+                <img src="img/offer-2.webp" srcset="img/offer-2@2x.webp 2x" alt="Круиз “Элайн”." loading="lazy">
               </picture>
             </li>
             <li class="cards__item">
@@ -170,8 +167,7 @@
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
-                <source type="image/webp" srcset="img/offer-3.webp 1x, img/offer-3@2x.webp 2x">
-                <img src="img/offer-3.jpg" srcset="img/offer-3@2x.jpg 2x" alt="Круиз “Атлантис”." loading="lazy">
+                <img src="img/offer-3.webp" srcset="img/offer-3@2x.webp 2x" alt="Круиз “Атлантис”." loading="lazy">
               </picture>
             </li>
             <li class="cards__item">
@@ -188,8 +184,7 @@
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
-                <source type="image/webp" srcset="img/offer-4.webp 1x, img/offer-4@2x.webp 2x">
-                <img src="img/offer-4.jpg" srcset="img/offer-4@2x.jpg 2x" alt="Круиз “Одиссей”." loading="lazy">
+                <img src="img/offer-4.webp" srcset="img/offer-4@2x.webp 2x" alt="Круиз “Одиссей”." loading="lazy">
               </picture>
             </li>
             <li class="cards__item">
@@ -206,8 +201,7 @@
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
-                <source type="image/webp" srcset="img/offer-5.webp 1x, img/offer-5@2x.webp 2x">
-                <img src="img/offer-5.jpg" srcset="img/offer-5@2x.jpg 2x" alt="Круиз “Олимпия”." loading="lazy">
+                <img src="img/offer-5.webp" srcset="img/offer-5@2x.webp 2x" alt="Круиз “Олимпия”." loading="lazy">
               </picture>
             </li>
             <li class="cards__item">
@@ -224,8 +218,7 @@
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
-                <source type="image/webp" srcset="img/offer-6.webp 1x, img/offer-6@2x.webp 2x">
-                <img src="img/offer-6.jpg" srcset="img/offer-6@2x.jpg 2x" alt="Круиз “Аврора”." loading="lazy">
+                <img src="img/offer-6.webp" srcset="img/offer-6@2x.webp 2x" alt="Круиз “Аврора”." loading="lazy">
               </picture>
             </li>
             <li class="cards__item">
@@ -242,8 +235,7 @@
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
-                <source type="image/webp" srcset="img/offer-7.webp 1x, img/offer-7@2x.webp 2x">
-                <img src="img/offer-7.jpg" srcset="img/offer-7@2x.jpg 2x" alt="Круиз “Леонор”." loading="lazy">
+                <img src="img/offer-7.webp" srcset="img/offer-7@2x.webp 2x" alt="Круиз “Леонор”." loading="lazy">
               </picture>
             </li>
             <li class="cards__item">
@@ -260,15 +252,14 @@
                 <a class="cards__btn btn" href="#!">Забронировать</a>
               </div>
               <picture>
-                <source type="image/webp" srcset="img/offer-2.webp 1x, img/offer-2@2x.webp 2x">
-                <img src="img/offer-2.jpg" srcset="img/offer-2@2x.jpg 2x" alt="Круиз “Минион - 1”." loading="lazy">
+                <img src="img/offer-2.webp" srcset="img/offer-2@2x.webp 2x" alt="Круиз “Минион - 1”." loading="lazy">
               </picture>
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="form-section" data-lazy-style="--bg-default: url('../img/form-section.jpg');--bg-default2x: url('../img/form-section@2x.jpg');--bg-webp: url('../img/form-section.webp');--bg-webp2x: url('../img/form-section@2x.webp');--bg-webpTablet: url('../img/form-section-tablet.webp');--bg-webpTablet2x: url('../img/form-section-tablet@2x.webp');--bg-webpMobile: url('../img/form-section-mobile.webp');--bg-webpMobile2x: url('../img/form-section-mobile@2x.webp');--bg-color: #e3ecf6;">
+      <section class="form-section" data-lazy-style="--bg-webp: url('../img/form-section.webp');--bg-webp2x: url('../img/form-section@2x.webp');--bg-webpTablet: url('../img/form-section-tablet.webp');--bg-webpTablet2x: url('../img/form-section-tablet@2x.webp');--bg-webpMobile: url('../img/form-section-mobile.webp');--bg-webpMobile2x: url('../img/form-section-mobile@2x.webp');--bg-color: #e3ecf6;">
         <div class="form-section__inner container">
           <div class="form-section__content">
             <h2>Раннее бронирование</h2>
@@ -319,8 +310,7 @@
           </div>
           <div class="content__map map" id="contactsMap" data-map="">
             <picture>
-              <source type="image/webp" srcset="img/map.webp 1x, img/map@2x.webp 2x">
-              <img src="img/map.jpg" srcset="img/map@2x.jpg 2x" alt="Адрес на карте." loading="lazy">
+              <img src="img/map.webp" srcset="img/map@2x.webp 2x" alt="Адрес на карте." loading="lazy">
             </picture>
           </div>
         </div>
