--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="page">
-    <div class="firstscreen page__firstscreen" style="--bg-default: url('../img/firstscreen.jpg');--bg-default2x: url('../img/firstscreen@2x.jpg');--bg-webp: url('../img/firstscreen.webp');--bg-webp2x: url('../img/firstscreen@2x.webp');--bg-webpTablet: url('../img/firstscreen-tablet.webp');--bg-webpTablet2x: url('../img/firstscreen-tablet@2x.webp');--bg-webpMobile: url('../img/firstscreen-mobile.webp');--bg-webpMobile2x: url('../img/firstscreen-mobile@2x.webp');">
+    <div class="firstscreen page__firstscreen" style="--bg-webp: url('../img/firstscreen.webp');--bg-webp2x: url('../img/firstscreen@2x.webp');--bg-webpTablet: url('../img/firstscreen-tablet.webp');--bg-webpTablet2x: url('../img/firstscreen-tablet@2x.webp');--bg-webpMobile: url('../img/firstscreen-mobile.webp');--bg-webpMobile2x: url('../img/firstscreen-mobile@2x.webp');">
       <div class="container">
         <header class="page-header firstscreen__header no-js" data-page-header="">
           <a class="logo" href="index.html">
